--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,33 @@
   margin: 0.5rem;
 }
 
+/* Login & Register */
+.row{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-container,
+.register-container {
+  margin: 2rem;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: 1rem;
+}
+
+.login-container input,
+.register-container input {
+  margin-bottom: .7rem;
+}
+
+.login-container button,
+.register-container button {
+  margin: .7rem 0;
+}
+
 /* Home */
 .game-container {
   display: flex;
