--- a/src/global.css
+++ b/src/global.css
@@ -93,12 +93,6 @@
   margin: 0.5rem 0;
 }
 
-.profile-container {
-  border: 1px solid #dee2e6;
-  border-radius: .25rem;
-  padding: .7rem;
-  margin: 0.5rem;
-}
 
 .input-field svg {
   color: #5c5c5c;
@@ -117,6 +111,18 @@
   border-radius: .25rem;
   margin: 0.5rem 0;
   padding: 0rem .5rem;
+}
+
+/* Profile */
+.profile-container {
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: .7rem;
+  margin: 0.5rem;
+}
+
+.profile-container button {
+  margin: .5rem;
 }
 
 /* GamePage */
@@ -176,4 +182,38 @@
 
 .review-item button {
   margin-top: 0.5rem;
+}
+
+/* SearchBar */
+.search-bar {
+  position: relative;
+}
+
+.search-bar input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.search-results {
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 8px;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  margin: 0;
+  color: black;
+}
+
+.search-results li {
+  cursor: pointer;
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+}
+
+.search-results li:last-child {
+  border-bottom: none;
 }
