--- a/src/global.css
+++ b/src/global.css
@@ -125,6 +125,13 @@
   margin: .5rem;
 }
 
+.category-container {
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: .7rem;
+  margin: 0.5rem;
+}
+
 /* GamePage */
 .game-page {
   display: flex;
@@ -216,4 +223,58 @@
 
 .search-results li:last-child {
   border-bottom: none;
+}
+
+/* CategoryManager */
+.add-category {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: 1rem;
+}
+
+.add-category button {
+  margin-top: 0.5rem;
+}
+
+.add-category input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.category-list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  background-color: #f8f9fa;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: 1rem;
+}
+
+.category-item {
+  background-color: #ffffff;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: .7rem;
+  margin: 0.5rem;
+}
+
+.category-item button {
+  margin: 0.5rem;
+}
+
+.category-item input {
+  margin: 0.5rem;
+  border: 1px solid #dee2e6;
+  border-radius: .25rem;
+  padding: .5rem;
 }
